# DashcamServer

./: .gitignore  CMakeLists.txt  README.md  bootstrap.bat
cmake/: set_max_warning_level.cmake
core/inc/: Core.h  Log.h  pch.h
core/src/: Log.cpp
inc/: DashcamServer.h
internal/: 0_test_main.cpp
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
